syntax = "proto2";
package csd;

enum SUBID
{
	// 服务端推送命令
	SUB_S_NORMAL 					= 100;
	
	SUB_S_STATUSFREE					= 102;
	
	//客户端命令   	
	SUB_C_START 					= 103;	
	SUB_C_ROUND_OVER 					= 105;
					
	//错误信息
	SUB_S_ERROR_INFO					= 150;	//CMD_S_ErrorCode 
	// 服务器场景命令
	SUB_SC_GAMESCENE_FREE				= 201;	//空闲场景消息CMD_S_StatusFree 
}


message CMD_S_ErrorCode
{
	required int32 cbLoseReason 	= 1; 	//错误码
} 



//场景消息开始，空闲状态
message CMD_S_GameFree
{
	required int64 MinBet 			= 1;	//最低下注 (下注必须是这个数的倍数)
	required int64 MaxBet 			= 2;	//最大下注
	required int64 lCurrentBet 		= 3;	//当前下注信息
	required int64 MyScoreInfo 		= 4;	//分数信息
	required int64 nLeftNum 			= 5;	//剩余免费旋转次数
	repeated int32 BetLists 			= 6;	//押分项列表 
}
//奖项列表
message CMD_S_Results
{   
   required int32 fruit				= 1;//水果 
   repeated int32 index				= 2;//需要动画的水果的下标
   required int32 winScore 			= 3;//赢分
} 
//拉霸开奖结果消息
message CMD_S_RoundResult 
{
	repeated int32 m_Table   		= 1; 	//表盘水果
    	repeated CMD_S_Results Line 		= 2; 	//连线				    	
    	required int64 Score 			= 3; 	//总共中了多少分
	required int64 lCurrentScore 		= 4; 	//当前携带金币
	required int32 nFreeRoundLeft 		= 5; 	//剩余免费旋转				
	required int64 lFreeRoundWinScore	= 6; 	//免费旋转总赢分		
	required string roundId			= 7; 	//牌局Id 
}

//开始按键(拉一盘)
message CMD_C_GameStart
{
	required int64 llBetScore  		= 1; 	//总押分
}


